--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set -g mode-mouse off
-set -g default-terminal "tmux-256color"
+set-option -g default-terminal screen-256color
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
