--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-terminal screen-256color
+set-option -g default-terminal screen
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
